# low-latency-video-system-study

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plot_resolution.py
experiments/baseline_webrtc/resume_delay/: README.md  report.md
experiments/baseline_webrtc/resume_delay/analysis/: plot_cdf.py
experiments/baseline_webrtc/resume_delay/raw_data/: resume_delay.csv
experiments/ffmpeg_jsmpeg/gop_full_iframe/: report.md
experiments/ffmpeg_jsmpeg/gop_full_iframe/analysis/: plot_gop.py
experiments/ffmpeg_jsmpeg/gop_full_iframe/raw_data/: ttff_gop1.csv
experiments/ffmpeg_jsmpeg/gop_vs_ttff/: README.md
experiments/ffmpeg_jsmpeg/gop_vs_ttff/raw_data/: gop_ttff.csv
experiments/ffmpeg_jsmpeg/resolution_vs_ttff/raw_data/: resolution_ttff.csv
experiments/gop_vs_ttff/: gop_ttff.csv  plot_gop.py  report.md
experiments/resolution_vs_ttff/: README.md  plot_resolution.py  report.md
experiments/resolution_vs_ttff/analysis/: plot_resolution.py
experiments/ring_buffer/results/: 首帧延迟测量结果-I帧检测-ring100.csv  首帧延迟测量结果-I帧检测改进-ring100.csv  首帧延迟测量结果-ring100.csv  首帧延迟测量结果-ring150.csv  首帧延迟测量结果-ring20.csv  首帧延迟测量结果-ring300.csv  首帧延迟测量结果-ring50.csv
include/relay/: relay_server.h  ring_buffer.h  ws_session.h
src/: main.cpp
src/relay/: relay_server.cpp  ring_buffer.cpp  ws_session.cpp
tools/: ffmpeg推流命令.txt  ttff_player.html
